[gd_scene load_steps=24 format=3 uid="uid://7vyxa0r88jw1"]

[ext_resource type="Script" uid="uid://crq7bgi8v7tkd" path="res://arcade_game/character/character.gd" id="1_3ncon"]
[ext_resource type="Texture2D" uid="uid://b6tw7cndx85hk" path="res://arcade_game/assets/sprites.png" id="1_eqe5j"]
[ext_resource type="Script" uid="uid://bamlgqnb3tjya" path="res://arcade_game/character/movement_node.gd" id="2_00hrj"]
[ext_resource type="Script" uid="uid://225cduj6pnoj" path="res://arcade_game/character/state_node.gd" id="2_74kb8"]
[ext_resource type="Script" uid="uid://b4o8xn3fou06b" path="res://arcade_game/character/sprite.gd" id="3_j61fq"]
[ext_resource type="Script" uid="uid://b7ewc05psfika" path="res://arcade_game/character/ledge_grab_node.gd" id="4_gi7m8"]
[ext_resource type="Script" uid="uid://b730kf85o3hss" path="res://arcade_game/character/dash_node.gd" id="5_fk1ya"]
[ext_resource type="Script" uid="uid://l17ya3rwetfp" path="res://arcade_game/character/direction_node.gd" id="5_ihqen"]
[ext_resource type="Script" uid="uid://cq3qwbichh0pt" path="res://arcade_game/character/sfx.gd" id="5_lu0vx"]
[ext_resource type="AudioStream" uid="uid://dvfkkw2qy6ocm" path="res://arcade_game/assets/audio_jump_1.wav" id="6_h1ec5"]
[ext_resource type="AudioStream" uid="uid://faces6if3wk7" path="res://arcade_game/assets/audio_hurt_1.wav" id="7_k1u7h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cikdt"]
size = Vector2(6, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wnkkl"]
size = Vector2(4, 4)

[sub_resource type="Animation" id="Animation_ogrma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_j5mkg"]
resource_name = "dash"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_cvn2f"]
resource_name = "explode"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2)]
}

[sub_resource type="Animation" id="Animation_xfnvw"]
resource_name = "fall"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(3, 0)]
}

[sub_resource type="Animation" id="Animation_m5w8m"]
resource_name = "grab_ledge"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}

[sub_resource type="Animation" id="Animation_0mue8"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}

[sub_resource type="Animation" id="Animation_y4pst"]
resource_name = "jump"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_5tjwt"]
resource_name = "run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6h0h7"]
_data = {
&"RESET": SubResource("Animation_ogrma"),
&"dash": SubResource("Animation_j5mkg"),
&"explode": SubResource("Animation_cvn2f"),
&"fall": SubResource("Animation_xfnvw"),
&"grab_ledge": SubResource("Animation_m5w8m"),
&"idle": SubResource("Animation_0mue8"),
&"jump": SubResource("Animation_y4pst"),
&"run": SubResource("Animation_5tjwt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iaw01"]
size = Vector2(2, 2)

[node name="Character" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_3ncon")
metadata/_edit_group_ = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_cikdt")

[node name="DashCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wnkkl")
disabled = true

[node name="StateNode" type="Node2D" parent="."]
script = ExtResource("2_74kb8")

[node name="MovementNode" type="Node2D" parent="StateNode"]
script = ExtResource("2_00hrj")

[node name="TimerPrejump" type="Timer" parent="StateNode/MovementNode"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="LedgeGrabNode" type="Node2D" parent="StateNode"]
script = ExtResource("4_gi7m8")

[node name="Timer" type="Timer" parent="StateNode/LedgeGrabNode"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="DashNode" type="Node2D" parent="StateNode"]
script = ExtResource("5_fk1ya")

[node name="Timer" type="Timer" parent="StateNode/DashNode"]
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="DirectionNode" type="Node2D" parent="."]
script = ExtResource("5_ihqen")

[node name="LedgeGrabRays" type="Node2D" parent="DirectionNode"]

[node name="RayCastDown" type="RayCast2D" parent="DirectionNode/LedgeGrabRays"]
position = Vector2(4, -8)
target_position = Vector2(0, 3)

[node name="RayCastUp" type="RayCast2D" parent="DirectionNode/LedgeGrabRays"]
position = Vector2(4, -8)
target_position = Vector2(0, -3)
hit_from_inside = true

[node name="RayCastForward" type="RayCast2D" parent="DirectionNode/LedgeGrabRays"]
position = Vector2(3, -3)
target_position = Vector2(3, 0)
hit_from_inside = true

[node name="Sprite" type="Sprite2D" parent="DirectionNode"]
position = Vector2(0, -1)
texture = ExtResource("1_eqe5j")
hframes = 4
vframes = 4
region_enabled = true
region_rect = Rect2(32, 0, 32, 32)
script = ExtResource("3_j61fq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DirectionNode/Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_6h0h7")
}
autoplay = "idle"

[node name="Sfx" type="Node2D" parent="."]
script = ExtResource("5_lu0vx")

[node name="AudioJump" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("6_h1ec5")
volume_db = -10.0

[node name="AudioExplode" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("7_k1u7h")

[node name="AreaCrush" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaCrush"]
shape = SubResource("RectangleShape2D_iaw01")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -1)

[connection signal="animation_finished" from="DirectionNode/Sprite/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="AreaCrush" to="." method="die" unbinds=1]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="die"]
